updated product model
